index.css
html {
	margin: auto;
	background-image: url('general_background.png');
	background-attachment: fixed;
}

body {
	width: 70%;
	margin: 0 auto;
	background-color: #777;
	text-align: center;
	margin-top: 1em !important;
	padding: 2%;
}

/* div { margin: 0 33% 0 0; } */

.header { color: #444; }

#pineapple { width: 30%; }

.clearfix { overflow: auto; zoom: 1; }

.container { display: -webkit-flex; display: flex; }

.initial {
	-webkit-flex: initial;
	flex: initial;
	width: 200px;
	min-width: 100px;
}

h1, h2, h3, .megrim { font-family: 'Megrim', cursive; }
/* rom { font-family: 'Megrim', cursive; font-weight: bold; } */

.none {
	-webkit-flex: none;
	flex: none;
	width: 200px;
}

.flex1 { -webkit-flex: 1; flex: 1; }
.flex2 { -webkit-flex: 2; flex: 2; }

@font-face {
	font-family: Martian;
	src: url('Xeheixw.ttf'), url('Xeheixw.eot');
	font-weight: normal;
	font-style: normal;
}

martian, .martian {
	font-family: Martian;
	font-style: normal;
}

#particles-js,
canvas.background {
	background-color: #212000;
	background-attachment: fixed;
	position: fixed;
	top: 0; left: 0;
	z-index: -5;
	width: 100%;
	height: 100%;
}

#mobile-nav {
  overflow: hidden;
  background-color: #333;
  position: relative;
}

#myLinks { display: none; }
#mobile-nav { display: none; }
#head-nav { display: block; }

#mobile-nav a {
  color: white;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
  display: block;
}

#mobile-nav a.icon {
  background: black;
  display: block;
  position: absolute;
  right: 0;
  top: 0;
}

#mobile-nav a:hover {
  background-color: #ddd;
  color: black;
}

.active {
  background-color: #4CAF50;
  color: white;
}

